<resources>
    <string name="app_name">Packup</string>

    <string name="main_nav_deadlines">待办</string>
    <string name="main_nav_events">事件</string>
    <string name="main_nav_documents">文件</string>

    <string name="login_title">通过北京大学账号登录到 Packup</string>
    <string name="login_student_id_hint">北京大学学号</string>
    <string name="login_password_id_hint">密码</string>
    <string name="login_button_alt">登录</string>

    <string name="login_error_network_unavailable">当前的网络连接不可用，请检查后重试。</string>
    <string name="login_error_e01">输入的学号或密码不正确。</string>
    <string name="login_error_e21">错误次数过多，请在 30 分钟后重试。</string>
    <string name="login_error_unknown">未知错误：</string>

    <string name="student_id_should_consist_of_exactly_10_digits">请输入由 10 位数字构成的学号。</string>
    <string name="student_id_or_password_is_not_correct">输入的学号或密码不正确。</string>

    <string name="login_hint">一旦登录，即表明你同意 Packup 的</string>
    <string name="save_credential_hint">一旦保存登录凭据，即表明你同意 Packup 的</string>
    <string name="space_and_space">&#160;和&#160;</string>
    <string name="closure">。</string>

    <string name="privacy_policy"><u>隐私政策</u></string>
    <string name="open_source_license"><u>开源许可</u></string>
    <string name="terms_of_use"><u>使用条款</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">3x6=12</string>
    <string name="add_widget">Add widget</string>


    <string name="widget_up_coming_next">接下来…</string>
    <string name="widget_events">近期事件</string>

    <string name="widget_recently_title_recent_deadlines">待办清单</string>
    <string name="widget_recently_uninitialized_intro">这是用于检查近期待办事项的应用微件。</string>
    <string name="widget_recently_uninitialized_login">请在 Packup 中提供登录凭据以充分利用此功能。</string>
    <string name="widget_recently_remaining">&#160;项待完成，</string>
    <string name="widget_recently_relax">似乎所有 Deadline 都已完成</string>
    <string name="widget_recently_due_tomorrow">&#160;项明天到期</string>
    <string name="widget_recently_due_this_week">&#160;项本周到期</string>

    <!--    TBD    -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_packup_account">Packup 账号 (邮箱)</string>
    <string name="login_packup_register">注册 <b>Packup 账号</b></string>
    <string name="login_packup_disconnected_mode">跳过此步骤</string>
    <string name="password_is_not_correct">账号 (邮箱) 或密码不正确。</string>
    <string name="invalid_email">账号 (邮箱) 不正确。</string>
    <string name="provide_credentials">保存登录凭据</string>
    <string name="expired">已逾期</string>
    <string name="have_submission">已提交</string>
    <string name="no_submission">未提交</string>

    <string name="date_time_format_omitted">%s 月 %s 日 %s:%s</string>
    <string name="date_time_format">%s 年 %s 月 %s 日 %s:%s</string>

    <string name="month1">1</string>
    <string name="month2">2</string>
    <string name="month3">3</string>
    <string name="month4">4</string>
    <string name="month5">5</string>
    <string name="month6">6</string>
    <string name="month7">7</string>
    <string name="month8">8</string>
    <string name="month9">9</string>
    <string name="month10">10</string>
    <string name="month11">11</string>
    <string name="month12">12</string>

    <string name="date_at_time">%1$s %2$s</string>
    <string name="date_time">%1$s，%2$s</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="yesterday">昨天</string>
    <string name="monday_initial">一</string>
    <string name="tuesday_initial">二</string>
    <string name="wednesday_initial">三</string>
    <string name="thursday_initial">四</string>
    <string name="friday_initial">五</string>
    <string name="saturday_initial">六</string>
    <string name="sunday_initial">日</string>
    <string name="accessibility_goto_next_week">转到下一周</string>
    <string name="accessibility_goto_previous_week">转到上一周</string>
    <string name="accessibility_today">今天</string>
    <string name="accessibility_selected">已选定</string>
    <string name="date_time_picker_start_time">开始时间</string>
    <string name="date_time_picker_end_time">结束时间</string>
    <string name="date_time_picker_start_date">开始日期</string>
    <string name="date_time_picker_end_date">结束日期</string>
    <string name="date_time_picker_choose_time">选择时间</string>
    <string name="date_time_picker_choose_date">选择日期</string>
    <string name="date_time_picker_accessibility_dialog_title">日期时间选取器</string>
    <string name="date_picker_accessibility_dialog_title">日期选取器</string>
    <string name="date_time_picker_range_accessibility_dialog_title">日期时间选取器范围</string>
    <string name="date_picker_range_accessibility_dialog_title">日期选取器范围</string>
    <string name="date_time_picker_accessiblility_start_time">开始时间选项卡</string>
    <string name="date_time_picker_accessiblility_end_time">结束时间选项卡</string>
    <string name="date_picker_accessiblility_start_date">开始日期选项卡</string>
    <string name="date_picker_accessiblility_end_date">结束日期选项卡</string>
    <string name="date_time_picker_accessibility_close_dialog_button">关闭对话</string>
    <string name="date_picker_accessibility_increment_month_button">月份递增</string>
    <string name="date_picker_accessibility_next_month_click_action">选择下个月</string>
    <string name="date_picker_accessibility_decrement_month_button">月份递减</string>
    <string name="date_picker_accessibility_previous_month_click_action">选择上个月</string>
    <string name="date_picker_accessibility_increment_day_button">天数递增</string>
    <string name="date_picker_accessibility_next_day_click_action">选择第二天</string>
    <string name="date_picker_accessibility_decrement_day_button">天数递减</string>
    <string name="date_picker_accessibility_previous_day_click_action">选择前一天</string>
    <string name="date_picker_accessibility_increment_year_button">年份递增</string>
    <string name="date_picker_accessibility_next_year_click_action">选择明年</string>
    <string name="date_picker_accessibility_decrement_year_button">年份递减</string>
    <string name="date_picker_accessibility_previous_year_click_action">选择前一年</string>
    <string name="date_time_picker_accessibility_increment_date_button">日期递增</string>
    <string name="date_picker_accessibility_next_date_click_action">选择下一个日期</string>
    <string name="date_time_picker_accessibility_decrement_date_button">日期递减</string>
    <string name="date_picker_accessibility_previous_date_click_action">选择上一个日期</string>
    <string name="date_time_picker_accessibility_increment_hour_button">小时递增</string>
    <string name="date_picker_accessibility_next_hour_click_action">选择下一个小时</string>
    <string name="date_time_picker_accessibility_decrement_hour_button">小时递减</string>
    <string name="date_picker_accessibility_previous_hour_click_action">选择前一个小时</string>
    <string name="date_time_picker_accessibility_increment_minute_button">分钟递增</string>
    <string name="date_picker_accessibility_next_minute_click_action">选择下一分钟</string>
    <string name="date_time_picker_accessibility_decrement_minute_button">分钟递减</string>
    <string name="date_picker_accessibility_previous_minute_click_action">选择前一分钟</string>
    <string name="date_time_picker_accessibility_period_toggle_button">切换上午/下午时间段</string>
    <string name="date_time_picker_accessibility_period_toggle_click_action">切换上午/下午时间段</string>
    <string name="date_time_picker_accessibility_selected_date">已选择 %s</string>
    <string name="people_picker_sample_label">标签</string>
    <string name="people_picker_search_directory">搜索目录</string>
    <string name="people_picker_search_progress">正在搜索…</string>
    <string name="people_picker_accessibility_default_hint">输入姓名或电子邮件</string>
    <string name="people_picker_accessibility_persona_added">已添加 %s</string>
    <string name="people_picker_accessibility_persona_removed">已删除 %s</string>
    <string name="people_picker_accessibility_replaced">已替换 %s，</string>
    <string name="people_picker_accessibility_click_persona">单击</string>
    <string name="people_picker_accessibility_delete_persona">删除</string>
    <string name="people_picker_accessibility_deselect_persona">取消选择</string>
    <string name="people_picker_accessibility_select_persona">选择</string>
    <string name="people_picker_accessibility_clicked_persona">已单击 %s</string>
    <string name="people_picker_accessibility_deselected_persona">已取消选择 %s</string>
    <string name="people_picker_accessibility_selected_persona">已选择 %s</string>
    <string name="people_picker_accessibility_deselect_selected_persona">，激活将取消选择</string>
    <string name="people_picker_accessibility_delete_selected_persona">，激活将删除</string>
    <string name="people_picker_accessibility_click_selected_persona">，单击激活</string>
    <plurals name="people_picker_accessibility_suggestions_opened">
        <item quantity="other">向 %s 个人打开的建议列表</item>
    </plurals>
    <plurals name="people_picker_accessibility_text_view">
        <item quantity="other">%s 个人</item>
    </plurals>
    <string name="persona_title_placeholder">无姓名</string>
    <string name="popup_menu_accessibility_item_toggle">切换</string>
    <string name="popup_menu_accessibility_item_select">选择</string>
    <string name="popup_menu_accessibility_item_click_selected">已选择 %s</string>
    <string name="popup_menu_accessibility_item_click_checked">已选择 %s</string>
    <string name="popup_menu_accessibility_item_click_unchecked">已取消选择 %s</string>
    <string name="popup_menu_accessibility_item_radio_button">单选按钮</string>
    <string name="popup_menu_accessibility_item_check_box">复选框</string>
    <string name="popup_menu_accessibility_item_state_checked">已选择</string>
    <string name="popup_menu_accessibility_item_state_not_checked">未选中</string>
    <string name="progress_circular_content_description_indeterminate">不确定</string>
    <string name="searchbar_clear_search">清除搜索</string>
    <string name="searchbar_back">返回</string>
    <string name="searchbar_query_hint_default">搜索</string>
    <string name="done">完成</string>
    <string name="tooltip_accessibility_dismiss_action">关闭</string>
    <string name="tooltip_accessibility_dismiss_announcement">已关闭工具提示</string>
</resources>