<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_activity_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/login_title"
        android:src="@drawable/packupIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="48dp"
        tools:ignoreViewBinding="true"
        app:layout_constraintBottom_toTopOf="@id/login_activity_form_container"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_activity_form_container"
        android:layout_width="match_parent"
        android:layout_height="312dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".64"
        android:animateLayoutChanges="true">

        <EditText
            android:id="@+id/login_activity_student_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:autofillHints=""
            android:background="@drawable/primaryTextFieldBackground"
            android:drawableStart="@drawable/ic_fluent_contact_card_24_regular"
            android:drawablePadding="12dp"
            android:drawableTint="@color/primaryTextFieldHintColor"
            android:textColorHint="@color/primaryTextFieldHintColor"
            android:hint="@string/login_student_id_hint"
            android:inputType="number"
            android:paddingHorizontal="16dp"
            android:fontFeatureSettings="tnum"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/login_activity_student_id_error_border"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:clickable="false"
            android:contentDescription="@string/student_id_should_consist_of_exactly_10_digits"
            android:src="@drawable/textfield_border_error"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/login_activity_student_id_error_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/student_id_should_consist_of_exactly_10_digits"
            android:textColor="?colorError"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_activity_student_id" />

        <EditText
            android:id="@+id/login_activity_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/primaryTextFieldBackground"
            android:drawableStart="@drawable/ic_fluent_lock_24_regular"
            android:drawablePadding="12dp"
            android:drawableTint="@color/primaryTextFieldHintColor"
            android:hint="@string/login_password_id_hint"
            android:inputType="textPassword"
            android:nextFocusRight="@id/login_activity_validate_button"
            android:nextFocusDown="@id/login_activity_validate_button"
            android:nextFocusForward="@id/login_activity_validate_button"
            android:paddingHorizontal="16dp"
            android:fontFeatureSettings="calt 0"
            android:textColorHint="@color/primaryTextFieldHintColor"
            app:layout_constraintTop_toBottomOf="@id/login_activity_student_id_error_hint"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/login_activity_password_error_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginTop="8dp"
            android:text="@string/student_id_or_password_is_not_correct"
            android:textColor="?colorError"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_activity_password" />

        <ImageView
            android:id="@+id/login_activity_password_error_border"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:clickable="false"
            android:contentDescription="@string/student_id_or_password_is_not_correct"
            android:src="@drawable/textfield_border_error"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/login_activity_student_id_error_hint" />

        <TextView
            android:id="@+id/login_activity_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/login_hint"
            android:textColor="@color/primaryTextFieldHintColor"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:viewBindingIgnore="true"
            app:layout_constraintTop_toBottomOf="@id/login_activity_password" />

        <LinearLayout
            android:id="@+id/login_activity_hint_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_activity_hint">

            <TextView
                android:id="@+id/login_activity_hint_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/privacy_policy"
                android:textColor="@color/primaryTextFieldHintColor"
                android:textStyle="bold"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_activity_password" />

            <TextView
                android:id="@+id/login_activity_hint_and"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/space_and_space"
                android:textColor="@color/primaryTextFieldHintColor"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:viewBindingIgnore="true"
                app:layout_constraintTop_toBottomOf="@id/login_activity_password" />

            <TextView
                android:id="@+id/login_activity_hint_terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/terms_of_use"
                android:textColor="@color/primaryTextFieldHintColor"
                android:textStyle="bold"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_activity_password" />

            <TextView
                android:id="@+id/login_activity_hint_closure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/closure"
                android:textColor="@color/primaryTextFieldHintColor"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:viewBindingIgnore="true"
                app:layout_constraintTop_toBottomOf="@id/login_activity_password" />
        </LinearLayout>


        <Button
            android:id="@+id/login_activity_validate_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/primaryButtonBackground"
            android:enabled="true"
            android:text="@string/login_button_alt"
            android:src="@drawable/ic_fluent_arrow_right_28_regular"
            android:textColor="?colorSurface"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/login_activity_hint_2"
            android:elevation="4dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <org.engrave.packup.component.shimmer.RepeatedShimmer
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/color_primary_700_opaque"
        android:layout_height="4dp"
        app:shimmer_color="@color/color_primary_400"
        android:visibility="invisible"
        android:id="@+id/login_activity_shimmer"/>

</androidx.constraintlayout.widget.ConstraintLayout>